# acr-push-tui

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: usage.md
src/acr_push_tui/: __init__.py  cli.py  logging_config.py  settings.py  workflow.py
src/acr_push_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/acr_push_tui/services/: __init__.py  azure.py  docker.py  subprocess_runner.py
src/acr_push_tui/tui/: __init__.py  app.py
tests/: test_settings.py  test_workflow.py
